Mobile spacing fixes

--- a/personal-site/src/components/Avatar/avatar.module.scss
+++ b/personal-site/src/components/Avatar/avatar.module.scss
@@ -2,6 +2,9 @@
 
 .container {
     width: 40%;
+    @media (max-width: $screen-lg) {
+        width: 36%;
+    }
     @media (max-width: $screen-md) {
         width: 100%;
         margin: 0 auto;
