--- a/personal-site/src/components/LayoutContainer/layout-container.module.scss
+++ b/personal-site/src/components/LayoutContainer/layout-container.module.scss
@@ -11,10 +11,9 @@
     opacity: 0;
     transition: opacity .4s ease-in;
     @media (max-width: $screen-lg) {
-        padding: 60px;
+        padding: 30px;
     }
     @media (max-width: $screen-md) {
-        padding: 30px;
         height: auto;
         flex-direction: column;
     }
